Добавлена возможность менять значение фиксируемого TTL

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">TTL Fixer</string>
     <string name="ttl_error">Ошибка при фиксации TTL</string>
     <string name="ttl_success">TTL успешно зафиксирован</string>
+    <string name="ttl_incorrect_value">Значение TTL неправильное</string>
 </resources>
