--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">TTL Fixer</string>
-
     <string name="ttl_success">TTL successfully fixed</string>
-
     <string name="ttl_error">Error at TTL fixing</string>
+    <string name="ttl_incorrect_value">TTL value is incorrect</string>
 </resources>
