Повысил версию, реализовал возможность перефиксации без перезагрузки, улучшил определение ошибок

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">TTL Fixer</string>
     <string name="ttl_success">TTL successfully fixed</string>
     <string name="ttl_error">Error at TTL fixing</string>
-    <string name="ttl_incorrect_value">TTL value is incorrect</string>
+    <string name="ttl_incorrect_value">Error: TTL value is incorrect</string>
+    <string name="root_error">Error: device is not rooted</string>
 </resources>
