--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">TTL Fixer</string>
     <string name="ttl_error">Ошибка при фиксации TTL</string>
     <string name="ttl_success">TTL успешно зафиксирован</string>
-    <string name="ttl_incorrect_value">Значение TTL неправильное</string>
+    <string name="ttl_incorrect_value">Ошибка: Значение TTL неправильное</string>
+    <string name="root_error">Ошибка: устройство не рутировано</string>
 </resources>
